Minor syntactic sugar